# historical-bce-cpp-1.x-without-shell

./: AUTHORS  CMakeLists.txt  LICENSE  README  bcecore.pro
sources/: CMakeLists.txt  balancer.cpp  setup.cpp
sources/math/: equation.cpp  fraction.cpp  integer.cpp  matrix.cpp  polynomial.cpp  polynomial_unknown.cpp
sources/parser/: common.cpp  element.cpp  molecule.cpp  rpt.cpp  syntax.cpp
tests/: CMakeLists.txt  tests_runner.cpp  tests_runner.hpp
tests/data/balancer/: balancer1.out  balancer10.in  balancer10.out  balancer100.in  balancer100.out  balancer101.in  balancer101.out  balancer102.out  balancer103.in  balancer103.out  balancer104.in  balancer104.out  balancer105.in  balancer105.out  balancer106.out  balancer107.out  balancer108.out  balancer109.in  balancer109.out  balancer11.out  balancer110.in  balancer110.out  balancer111.in  balancer111.out  balancer112.out  balancer113.out  balancer114.in  balancer114.out  balancer115.out  balancer116.in  balancer116.out  balancer117.in  balancer117.out  balancer118.in  balancer118.out  balancer119.in  balancer119.out  balancer12.in  balancer12.out  balancer120.in  (+545 more)
tests/data/bugs/balancer/: balancer1.in  balancer1.out  balancer2.in  balancer3.in  balancer3.out  balancer4.in  balancer4.out
tests/data/features/fraction_suffix/: fsf1.in  fsf1.out  fsf2.in  fsf2.out
tests/data/math/equation/: equation1.in  equation1.out  equation10.in  equation100.in  equation100.out  equation101.in  equation102.in  equation103.in  equation103.out  equation104.in  equation104.out  equation105.in  equation105.out  equation106.in  equation107.in  equation107.out  equation108.in  equation109.in  equation11.in  (+674 more)
tests/sources/: balancer_tests.cpp  balancer_tests.hpp
tests/sources/math/: equation_tests.cpp  equation_tests.hpp  fraction_tests.cpp  fraction_tests.hpp
tests/sources/parser/: molecule_tests.cpp  molecule_tests.hpp  preparser_tests.cpp  preparser_tests.hpp
(+1698 files in other folders)
